Fix: Set default CTA to Sign In

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
 
-            <button id="start-btn" class="btn primary-btn pulse">Start Analysis</button>
+            <button id="start-btn" class="btn primary-btn pulse">Sign In to Start</button>
             <p class="disclaimer">Processing happens locally on your device.</p>
         </div>
 
