feat: Add Picture-in-Picture widget with emoji avatars and idle detection
- Implemented Document PiP API for always-on-top floating widget
- Added emoji avatar system (Giraffe/Turtle/Ruler/Sleep) for visual feedback
- Enhanced posture detection with lateral tilt recognition
- Implemented idle detection to pause monitoring when user leaves frame
- Optimized UI sizing for compact 300x150px widget
- Improved messaging with positive reinforcement
- All processing remains 100% local (privacy-first)

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -74,6 +74,9 @@
             <button id="toggle-guard-btn" class="btn-fab">
                 🛡️ Activate
             </button>
+            <button id="pip-btn" class="btn-fab secondary hidden" title="Pop Out Widget">
+                ↗️
+            </button>
         </div>
 
         <!-- Settings Modal -->
