--- a/pwa/index.html
+++ b/pwa/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PosturePal - AI Posture Monitor</title>
+    <title>Spine Shine - AI Posture Monitor</title>
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/calibration.css">
@@ -20,7 +20,7 @@
     <div id="app">
         <!-- Header -->
         <header class="app-header">
-            <h1 class="logo">PosturePal</h1>
+            <h1 class="logo">Spine Shine</h1>
             <div class="header-controls">
                 <div class="status-indicator" id="status-indicator">
                     <span class="status-dot"></span>
@@ -35,13 +35,13 @@
             <div class="info-grid">
                 <!-- Left Column: About -->
                 <div class="info-section">
-                    <h2>🦒 About PosturePal</h2>
+                    <h2>🦒 About Spine Shine</h2>
                     <p>
                         <strong>Your AI-powered posture companion</strong> that helps you maintain healthy neck and
                         shoulder alignment while working on your computer.
                     </p>
                     <p>
-                        Using advanced computer vision, PosturePal monitors your posture in real-time
+                        Using advanced computer vision, Spine Shine monitors your posture in real-time
                         and alerts you when you:
                     </p>
                     <ul>
@@ -162,7 +162,7 @@
         <div id="calibration-modal" class="calibration-modal hidden">
             <div class="calibration-content">
                 <div class="calibration-header">
-                    <h2>Posture Calibration Wizard</h2>
+                    <h2>Spine Shine Calibration Wizard</h2>
                     <div class="calibration-progress">
                         <div class="progress-dot" data-step="0"></div>
                         <div class="progress-dot" data-step="1"></div>
@@ -177,7 +177,7 @@
                 <div class="calibration-step active" data-step="0">
                     <div class="step-instruction">
                         <h3>Welcome! 👋</h3>
-                        <p>This wizard will personalize Text Neck Guard to your unique physique and camera setup.</p>
+                        <p>This wizard will personalize Spine Shine to your unique physique and camera setup.</p>
                         <p style="margin-top: 10px;">You'll be asked to demonstrate different postures. The process
                             takes about 2-3 minutes.</p>
                     </div>
